Time: 1 ms (84.54%) | Memory: 41.9 MB (62.14%) - LeetSync